# gcal-tui

./: .gitignore  Cargo.toml  README.md
src/: app.rs  calendar.rs  config.rs  constants.rs  error.rs  event.rs  lib.rs  logging.rs  main.rs  view.rs
src/controller/: run.rs
