[package]
name = "gcal-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
config = "0.15.23"
crossterm = { version = "0.29.0", features = ["event-stream"] }
derive_more = { version = "2.1.1", features = ["from"] }
directories = "6.0.0"
dotenvy = "0.15.7"
futures = "0.3.32"
google-calendar3 = "7.0.0"
ratatui = { version = "0.30.0", features = ["crossterm_0_29"] }
serde = "1.0.228"
serde_json = "1.0.150"
shellexpand = "3.1.2"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
